# voyc-gui

./: .gitignore  CHANGELOG.md  README.md
.kimi/: QUALITY_GATE.md  RULES.md
learn-qt/: README.md
learn-qt/01-hello-qml/: CMakeLists.txt  README.md  main.cpp  main.qml
learn-qt/02-canvas-basic/: CMakeLists.txt  README.md  main.cpp  main.qml
learn-qt/03-mouse-event/: CMakeLists.txt  README.md  main.cpp  main.qml
learn-qt/04-drag-object/: CMakeLists.txt  README.md  main.cpp  main.qml
learn-qt/05-zoom-pan/: CMakeLists.txt  README.md  main.cpp  main.qml
src/: CMakeLists.txt  Config.qml  MenuButton.qml  PROGRESS.md  UiButton.qml  main.cpp  main.qml
