cmake_minimum_required(VERSION 3.16)
project(hello-qml LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_add_executable(hello-qml
    main.cpp
)

qt_add_qml_module(hello-qml
    URI HelloQml
    VERSION 1.0
    QML_FILES main.qml
)

target_link_libraries(hello-qml PRIVATE Qt6::Quick)
